--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "repository": "git@github.com:thinktwice13/fcc-vue-challenge.git",
   "author": "Mario K",
   "license": "MIT",
+  "engines": {
+    "npm": "5.3.x",
+    "node": "8.4.x"
+  },
   "dependencies": {
     "express": "^4.15.4"
   },
@@ -13,9 +17,16 @@
     "nodemon": "^1.12.1"
   },
   "scripts": {
-    "postinstall": "cd client && npm install && cd ..",
-    "server": "nodemon index",
+    "heroku-postinstall":
+      "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "start": "node index.js",
+    "test": "node index.js",
+    "server": "nodemon index.js",
     "client": "cd client && npm run dev",
     "dev": "concurrently \"npm run server\" \"npm run client\""
-  }
+  },
+  "cacheDirectories": [
+    "node_modules",
+    "client/node_modules"
+  ]
 }
