--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "body-parser": "^1.18.1",
     "express": "^4.15.4"
   },
   "devDependencies": {
