--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.18.1",
-    "express": "^4.15.4"
+    "cookie-session": "^1.3.1",
+    "express": "^4.15.4",
+    "mongoose": "^4.11.12",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
+    "public-ip": "^2.3.5"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
