--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "highcharts": "^5.0.14",
     "vue": "^2.4.2",
+    "vue-highcharts": "^0.0.10",
     "vue-router": "^2.7.0",
     "vuetify": "^0.15.7",
     "vuex": "^2.4.0",
