--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "highcharts": "^5.0.14",
+    "socket.io-client": "^2.0.3",
     "vue": "^2.4.2",
     "vue-highcharts": "^0.0.10",
     "vue-router": "^2.7.0",
